# Tod

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PHASE10.md  PHASE12.md  PHASE13.md  PHASE14.md  PHASE15.md  PHASE16.md  PHASE18.md  PHASE19.md  PHASE7.md  README.md  ROADMAP.md  tod-living-list.md
docs/: PHASE11.md  PHASE14.md  PHASE18.md  PHASE8.md  PHASE9.md  Press.md  ROADMAP.md  alpha-user-test.md  changes-2026-02-23.md  codebase-assessment.md  index.html  live-run-log.md  module-state-2026-03-03.md  phase10-implementation-2026-02-28.md  phase11-implementation-2026-03-02.md  phase12-implementation-log-2026-03-03.md  phase13-implementation-log-2026-03-03.md  phase14-implementation-log-2026-03-03.md  phase15-implementation-log-2026-03-03.md  phase16-implementation-log-2026-03-03.md  phase17-implementation-log-2026-03-03.md  phase18-implementation-log-2026-03-12.md  phase8-implementation-2026-02-27.md  phase9-implementation-2026-02-28.md  runbook.md  strategic-plan.md
docs/archive/: PHASE17.md
docs/webpages/: tod-architecture-map_v1.0.html  tod-mindmap_v1.1.html
src/: cli.rs  config.rs  context.rs  editor.rs  llm.rs  log_schema.rs  loop.rs  loop_io.rs  main.rs  planner.rs  reviewer.rs  runner.rs  schema.rs  stats.rs  test_util.rs  util.rs
tests/: command_output_contract.rs
