[package]
name = "tod"
version = "0.1.0"
edition = "2021"
description = "A minimal Rust coding agent that edits projects via LLM-generated JSON"
license = "MIT"
repository = "https://github.com/<your-username>/Tod"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.5.59", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3.2.0", features = ["json"] }
